--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <h1>Root node </h1>
   <p>test cases</p>
   <p></p>
-  <a href="today_/home">Back</a>
+  <a href="today_/index.html">Back</a>
 </body>
 </html>
